# LegalDoc

./: README.md  app.py  database.py  document_processor.py  gemini_analyzer.py  legal_documents.db  pyproject.toml  requirements.txt  visualizations.py
