[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "google-genai>=1.32.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "sift-stack-py>=0.8.4",
    "streamlit>=1.49.1",
]
